# sdl3-gl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  mat4.h  obj_loader.h  parse.h  sdl3-gl.c  sdl3-glsl.c
android/: README.md  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/jni/: CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/sdl3gl/: MainActivity.java
android/app/src/main/res/values/: strings.xml
assets/: Oriental Asian Style_Table N210526.mtl  Victory Car_Toy N300326.mtl
glad/include/glad/: gl.h
